Fixed layout issues with search explanation text Fixed layout issues with search results Moved card search related Javascript to cardSearch.js

--- a/src/HallOfBeorn/Content/Site.css
+++ b/src/HallOfBeorn/Content/Site.css
@@ -717,11 +717,21 @@ tr.pager td {
     margin-right:10px;
     width:60px;
 }
-
-.seach-explanation-glyph {
+.search-explanation-container {
     display: inline-block;
+}
+
+.search-explanation-content {
+    display: table;
+}
+
+.search-explanation-content p {
+    display: table-cell;
     text-align: center;
     vertical-align: middle;
+}
+
+.search-explanation-glyph {
     font-family: Symbol;
     font-size: 12px;
     font-weight:bold;
@@ -734,14 +744,46 @@ tr.pager td {
     border-width:1px;
     border-radius: 14px;
     padding: 1px;
-    margin-right: 6px;
+}
+
+.search-explanation-glyph p {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
 }
 
 .search-explanation {
-    float:right;
+    position: relative;
+    float: right;
     margin-right:4px;
     color: darkgray;
 }
+
+.search-explanation-default {
+    height: 19px;
+}
+
+.search-explanation-button {
+    position: absolute;
+    top: 2px;
+    right: 6px;
+}
+
+.search-explanation-message {
+    margin-top: 2px;
+    margin-right: 30px;
+}
+
+/*
+.search-explanation-message {
+    display: inline-table;
+}
+
+.search-explanation-message p {
+    display: table-cell;
+    vertical-align: middle;
+}
+*/
 
 /********************
 *   Mobile Styles   *
